--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Jobmatrix</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
@@ -60,6 +60,7 @@
     <div>
       <h1>このページは存在しません。</h1>
     </div>
+    <a href="https://radiant-reef-85512.herokuapp.com/">トップ</a>に戻る。
   </div>
 </body>
 </html>
