--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Jobmatrix</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
@@ -58,9 +58,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>バグが発生しています。</h1>
+      <h1>アクセス権限がない、もしくはバグが発生しています。</h1>
     </div>
-    <p>管理者に連絡いただけますと幸いです。</p>
+    <a href="https://radiant-reef-85512.herokuapp.com/">トップ</a>に戻る。
   </div>
 </body>
 </html>
