--- a/public/404.html
+++ b/public/404.html
@@ -60,7 +60,7 @@
     <div>
       <h1>このページは存在しません。</h1>
     </div>
-    <a href="https://radiant-reef-85512.herokuapp.com/">トップ</a>に戻る。
+    <p><a href="https://radiant-reef-85512.herokuapp.com/">トップ</a>に戻る。</p>
   </div>
 </body>
 </html>
