--- a/public/500.html
+++ b/public/500.html
@@ -60,7 +60,7 @@
     <div>
       <h1>アクセス権限がない、もしくはバグが発生しています。</h1>
     </div>
-    <p><a href="https://radiant-reef-85512.herokuapp.com/">トップ</a>に戻る。</p>
+    <p><a href="#">トップ</a>に戻る。</p>
   </div>
 </body>
 </html>
