--- a/public/404.html
+++ b/public/404.html
@@ -60,7 +60,7 @@
     <div>
       <h1>このページは存在しません。</h1>
     </div>
-    <p><a href="#">トップ</a>に戻る。</p>
+    <p><a href="http://133.130.66.175">トップ</a>に戻る。</p>
   </div>
 </body>
 </html>
