--- a/public/422.html
+++ b/public/422.html
@@ -60,7 +60,7 @@
     <div>
       <h1>アクセス権限がありません。</h1>
     </div>
-    <p><a href="https://radiant-reef-85512.herokuapp.com/">トップ</a>に戻る。</p>
+    <p><a href="http://133.130.66.175">トップ</a>に戻る。</p>
   </div>
 </body>
 </html>
